# PluginDiscoveryDemo

./: .clang-format  CMakeLists.txt  README.md  build.cmd  build_linux.sh
HostApp/: AddOnManager.cpp  AddOnManager.hpp  HostApp.cpp  PortManager.cpp  PortManager.hpp  SharedLibrary.hpp
MyAddon/: MyAddon.cpp  MyAddon.hpp
MyAddon2/: MyAddon.cpp  MyAddon.hpp  MyAddon2.cpp  MyAddon2.hpp
MyAddon3/: MyAddon3.cpp  MyAddon3.hpp
include/: Packet.hpp  PluginAPI.hpp
